--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,14 +1,13 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+$akdev-blue: #2C5DC6
+$akdev-blue-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $akdev-blue
+$primary-invert: $akdev-blue-invert
 $body-color: #333
-$black: #2b2523
+$black: #222222
 
 .navbar .navbar-menu
   box-shadow:none !important
@@ -88,9 +87,9 @@ footer.footer
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
-$menu-item-active-color: $kaldi-red-invert
-$menu-item-active-background-color:	$kaldi-red-invert
-$menu-list-border-left: 1px solid $kaldi-red-invert
+$menu-item-active-color: $akdev-blue-invert
+$menu-item-active-background-color:	$akdev-blue-invert
+$menu-list-border-left: 1px solid $akdev-blue-invert
 $menu-label-color: $white-ter
 
 
