Style document list

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -98,7 +98,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #FFF;
 .blog-list-item header
   display: flex;
   margin-bottom: 1em;
